src/objects/RecordListLayout__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldsToSearch__c</fullName>
        <description>Fields in which will be searched the inserted text</description>
        <inlineHelpText>The fields api names separeted by comma</inlineHelpText>
        <label>Fields To Search</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldsToShow__c</fullName>
        <description>Fields that will be shown</description>
        <inlineHelpText>Insert the fields api names separeted by comma</inlineHelpText>
        <label>Fields To Show</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IconName__c</fullName>
        <description>Name of the Lightning Icon to show next to the name</description>
        <inlineHelpText>Insert the name of a Lightning Icon. 
Ex: &quot;utility:user&quot;</inlineHelpText>
        <label>Icon Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <description>API name of the Sobject</description>
        <inlineHelpText>Insert the API name of the Salesforce Object</inlineHelpText>
        <label>Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeDevName__c</fullName>
        <inlineHelpText>Insert the record type developer name</inlineHelpText>
        <label>Record Type Dev Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionAPIName__c</fullName>
        <inlineHelpText>Insert a unique API name for this section</inlineHelpText>
        <label>Section API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Record List Layout</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record List Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record List Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fields_To_Search_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FieldsToSearch__c)</errorConditionFormula>
        <errorDisplayField>FieldsToSearch__c</errorDisplayField>
        <errorMessage>Fields To Search field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fields_To_Show_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FieldsToShow__c)</errorConditionFormula>
        <errorDisplayField>FieldsToShow__c</errorDisplayField>
        <errorMessage>Fields To Show field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Section_API_Name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( SectionAPIName__c ,&quot;^[A-Za-z0-9_]*$&quot;))</errorConditionFormula>
        <errorDisplayField>SectionAPIName__c</errorDisplayField>
        <errorMessage>Only alfanumeric or underscore characters are admitted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_Section_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VLOOKUP($ObjectType.RecordListLayout__c.Fields.Name, $ObjectType.RecordListLayout__c.Fields.Name, Name) = Name, OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name field must be unique</errorMessage>
    </validationRules>
</CustomObject>